<resources>
    <string name="app_name">Mundo</string>
    <string name="facebook_app_id">180683032535147</string>
    <string name="fb_login_protocol_scheme">fb180683032535147</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="errorMissingInfo">Login credentials missing</string>
    <string name="loginError">Login Error, please try again later</string>
    <string name="userExists">User already exists. Please Login</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="proceed">PROCEED</string>
    <string name="welcomeBack">Welcome Back!</string>
    <string name="welcome">WELCOME</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="sign_up_to_get_started">Sign up to get started</string>
    <string name="welcome_back_title">WELCOME BACK</string>
    <string name="detailsError">Please check your credentials</string>
    <string name="errorTryLater">Server Error, Please try later.</string>
    <string name="missingFBData">Missing Facebook Data, please try again</string>
    <string name="or">or</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="edit_item">Edit Item</string>
    <string name="done">Done</string>
    <string name="tags">Title</string>
    <string name="price">Price</string>
    <string name="prices">Prices</string>
    <string name="all">All</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="inbox">Inbox</string>
    <string name="active">Active</string>
    <string name="not_active">Inactive</string>
    <string name="description">Description</string>
    <string name="nothingToShow">Currently Nothing to Show</string>
    <string name="loading">Loading...</string>
    <string name="hour">Hour</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="extras">Extras</string>
    <string name="location">Location</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="noMessages">No Messages</string>
    <string name="unauthorized">Unauthorized, please login again</string>
    <string name="book_now">Book Now</string>
    <string name="back">Back</string>
    <string name="listing">Listing</string>
    <string name="register">Register</string>
    <string name="pick_category">Pick a category</string>
    <string name="pick_type">Pick a type</string>
    <string name="details">Details</string>
    <string name="title">Title</string>

    <!-- String array definitions -->
    <string-array name="categories">
        <item>Bicycle</item>
        <item>Photography</item>
        <item>Surfing</item>
    </string-array>

    <string-array name="bicycle_types">
        <item>Mountain</item>
        <item>Road</item>
        <item>Children</item>
        <item>Fixed Gear</item>
        <item>Other</item>
    </string-array>

    <string-array name="photography_types">
        <item>Camera</item>
        <item>Lenses</item>
        <item>Accessories</item>
    </string-array>

    <string-array name="surfboard_types">
        <item>Shortboard</item>
        <item>Longboard</item>
    </string-array>

    <!-- Steps Array Definitions -->
    <string-array name="steps_array">
        <item>Type</item>
        <item>Details</item>
        <item>Prices</item>
        <item>Images</item>
    </string-array>

</resources>