<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.silbytech.mundo.SingleListingFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:background="@color/grey500"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_centerVertical="true"
                android:textColor="@color/link_blue"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:text="@string/cancel"/>

            <TextView
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/edit_item" />

            <TextView
                android:text="@string/done"
                android:textSize="20sp"
                android:layout_alignParentEnd="true"
                android:paddingRight="5dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="@color/link_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </RelativeLayout>


    </android.support.constraint.ConstraintLayout>



</FrameLayout>
