<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/mundoImg"
        android:layout_centerHorizontal="true"
        android:layout_width="263dp"
        android:layout_height="103dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/mundo_logo_bg"/>

    <RelativeLayout
        android:id="@+id/inputFrag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/mundoImg"
        android:layout_marginTop="40dp">

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtEmail"

            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />


        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="56dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/buttonsFrag"
        android:layout_below="@+id/inputFrag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/login"/>

        <TextView
            android:id="@+id/tvOr"
            android:layout_below="@+id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/or" />



        <com.facebook.login.widget.LoginButton
            android:layout_below="@+id/tvOr"
            android:id="@+id/fb_login_button"
            android:layout_width="287dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="152dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" />


    </RelativeLayout>


</RelativeLayout>