<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/add_listing_background"
    android:layout_height="match_parent">

            <com.shuhart.stepview.StepView
                android:id="@+id/stepsView"
                android:background="@color/mundo_blue"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="90dp" />

            <TextView
                android:id="@+id/tvPageTitle"
                android:layout_centerHorizontal="true"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="3dp"
                android:text="@string/pick_category"
                android:layout_below="@id/stepsView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ListView
                android:id="@+id/choose_categories_listView"
                android:choiceMode="singleChoice"
                android:listSelector="@android:color/darker_gray"
                android:layout_below="@+id/tvPageTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </ListView>

            <TextView
                android:id="@+id/tvType"
                android:layout_centerHorizontal="true"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="3dp"
                android:text="@string/pick_type"
                android:layout_below="@id/choose_categories_listView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <ListView
                android:id="@+id/choose_type_list"
                android:choiceMode="singleChoice"
                android:listSelector="@android:color/darker_gray"
                android:layout_below="@+id/tvType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </ListView>

    <Button
        android:id="@+id/btnNextStepOne"
        android:text="@string/next"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="60dp" />
</RelativeLayout>