<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.silbytech.mundo.SingleListingFragment">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/headerLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/grey500">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:clickable="true"
                    android:layout_marginStart="5dp"
                    android:text="@string/cancel"
                    android:textColor="@color/link_blue"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:text="@string/edit_item"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="5dp"
                    android:clickable="true"
                    android:layout_marginRight="5dp"
                    android:text="@string/done"
                    android:textColor="@color/link_blue"
                    android:textSize="20sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_below="@+id/headerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="50dp">

                <TextView
                    android:id="@+id/tvListingTitle"
                    android:textSize="20sp"
                    android:text="This is the title"
                    android:textColor="@color/black"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

        </RelativeLayout>

    </android.support.constraint.ConstraintLayout>


    <!-- This is the scroll view which will contain ONE Relative layout -->
    <ScrollView
        android:id="@+id/mainScrollView"
        android:layout_below="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- The layout that will have the Image, description and its text -->
        <RelativeLayout
            android:id="@+id/mainFrag"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/upperFrag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/listingImg"
                    android:layout_width="match_parent"
                    android:layout_height="130dp" />

                <TextView
                    android:id="@+id/tvDescriptionHeader"
                    android:layout_marginTop="3dp"
                    android:layout_below="@+id/listingImg"
                    android:text="@string/description"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_below="@+id/tvDescriptionHeader"
                    android:scrollbars="vertical"
                    android:maxLines="4"
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="80dp" />
            </RelativeLayout>

            <!-- The layout that will have Prices -->
            <include
                android:id="@+id/priceSec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/upperFrag"
                layout="@layout/price_boxes_fragment"/>


            <include android:id="@+id/mapInclude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/priceSec"
                layout="@layout/map_frag"/>

        </RelativeLayout>
    </ScrollView>

    <Button
        android:text="@string/book_now"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"/>
</RelativeLayout>
