<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.silbytech.mundo.SingleListingFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <RelativeLayout
                android:id="@+id/headerLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/grey500">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:clickable="true"
                    android:layout_marginStart="5dp"
                    android:text="@string/cancel"
                    android:textColor="@color/link_blue"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:text="@string/edit_item"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="5dp"
                    android:clickable="true"
                    android:layout_marginRight="5dp"
                    android:text="@string/done"
                    android:textColor="@color/link_blue"
                    android:textSize="20sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_below="@+id/headerLayout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="50dp">

                <Switch
                    android:id="@+id/switchActive"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>


        </RelativeLayout>






    </android.support.constraint.ConstraintLayout>


</RelativeLayout>
