<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="90dp">

    <RelativeLayout
        android:id="@+id/pricesSection"
        android:layout_below="@+id/upperFrag"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:background="@color/grey500"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:layout_height="fill_parent"
                android:layout_width="0dp">

                <RelativeLayout
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvPriceHour"
                        android:text="$17.55"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/black"
                        android:textSize="18sp"/>
                    <TextView
                        android:id="@+id/hourTitle"
                        android:text="@string/hour"
                        android:layout_below="@+id/tvPriceHour"
                        android:layout_width="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="18sp"/>

                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:background="@color/grey500"
                android:layout_weight="1"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_height="fill_parent"
                android:layout_width="0dp">

                <RelativeLayout
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvPriceDay"
                        android:text="$17.55"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/black"
                        android:textSize="18sp"/>
                    <TextView
                        android:id="@+id/dayTitle"
                        android:text="@string/day"
                        android:layout_below="@+id/tvPriceDay"
                        android:layout_width="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="18sp"/>

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:background="@color/grey500"
                android:layout_weight="1"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_height="fill_parent"
                android:layout_width="0dp">

                <RelativeLayout
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvPriceWeek"
                        android:text="$17.55"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/black"
                        android:textSize="18sp"/>
                    <TextView
                        android:id="@+id/weekTitle"
                        android:text="@string/week"
                        android:layout_below="@+id/tvPriceWeek"
                        android:layout_width="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="18sp"/>

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>